testsuite/tests/checks/abstract_types/test.out
abstract_type_declarations.ads:3:19: error: abstract_type_declarations - rule violation
3 |    type Figure is abstract tagged private;              --  FLAG
  |                   ^^^^^^^^^^^^^^^^^^^^^^^ 

abstract_type_declarations.ads:6:19: error: abstract_type_declarations - rule violation
6 |    type Figure is abstract tagged null record;          --  FLAG
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

